--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,1 +1,1 @@
-{"hola":"hello"}
+{"alleys":"Allies","culture":"rocknroll culture","find":"Discover our vision","hola":"hello","innovation":"INNOVATION AS A WAY TO POSITIVELY IMPACT PEOPLE'S LIVES","last_work":"WE ARE AS GOOD AS OUR LAST WORK","view":"See more","work":"OUR WORK DEFINES US"}
