--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -1,1 +1,1 @@
-{"hola":"hola"}
+{"alleys":"Aliados","culture":"cultura rocknrolla","find":"descubre nuestra visión","hola":"hola","innovation":"INNOVACIÓN COMO LA FORMA DE IMPACTAR DE FORMA POSITIVA EN LA VIDA DE PERSONAS","last_work":"SOMOS TAN BUENOS COMO NUESTRO ÚLTIMO TRABAJO","view":"Ver más","work":"NUESTRO TRABAJO NOS DEFINE"}
