--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,1 +1,1 @@
-{"alleys":"Partners","culture":"rocknroll culture","find":"Discover our vision","innovation":"INNOVATION AS A WAY TO POSITIVELY IMPACT PEOPLE'S LIVES","last_work":"WE ARE AS GOOD AS OUR LAST WORK","view":"take a look","work":"OUR WORK\\nDEFINES US"}
+{"alleys":"Partners","culture":"Rocknrolla Culture","find":"Discover our vision","innovation":"Innovation is our way\\nof making a positive impact\\non people’s lives.","last_work":"We are only as good as\\nour last job.","view":"take a look","work":"OUR WORK\\nDEFINES US"}
