--- a/locales/en/brands.json
+++ b/locales/en/brands.json
@@ -1,1 +1,1 @@
-{"brands_text":"CONNECTING BRANDS WITH PEOPLE\\n THROUGH THE CONSTRUCTION\\n OF THE MOST VALUABLE ASSET THAT EXISTS:\\n TRUST.\n"}
+{"brands_text":"CONNECTING BRANDS WITH\\n PEOPLE THROUGH THE\\n CONSTRUCTION OF THE MOST\\n VALUABLE ASSET THAT EXISTS:\\n TRUST.\n"}
