--- a/locales/en/future.json
+++ b/locales/en/future.json
@@ -1,1 +1,1 @@
-{"future_text":"CONNECTING BRANDS WITH PEOPLE\\n THROUGH THE POSITIVE IMPACT ON THEIR\\n SENSITIVITY, THE WAY\\n THEY INTERACT WITH EACH OTHER\\n AND WITH THE PLANET'S RESOURCES."}
+{"future_text":"CONNECTING BRANDS WITH PEOPLE \\nTHROUGH THE POSITIVE IMPACT ON\\n THEIR SENSITIVITY, THE WAY\\n THEY INTERACT WITH EACH OTHER\\n AND WITH THE PLANET'S RESOURCES."}
