rock n rollal buzz

--- a/locales/en/buzz.json
+++ b/locales/en/buzz.json
@@ -1,1 +1,1 @@
-{"buzz_text":"CONNECTING BRANDS WITH PEOPLE\\n WITH FRESHNESS, SURPRISE,\\n ENTERTAINMENT AND INFLUENCE."}
+{"buzz_text":"CONNECTING BRANDS WITH PEOPLE\\n WITH FRESHNESS, SURPRISE,\\n ENTERTAINMENT AND INFLUENCE.","buzz_text2":"the way we work"}
