--- a/locales/en/general.json
+++ b/locales/en/general.json
@@ -1,1 +1,1 @@
-{"back":"Go back","leadership":"leadership","sucess_cases":"success stories"}
+{"back":"Go back","brandsterritory":"brands and territories","leadership":"leadership","sucess_cases":"success stories"}
