--- a/locales/es/buzz.json
+++ b/locales/es/buzz.json
@@ -1,1 +1,1 @@
-{"buzz_text":"CONECTANDO MARCAS CON PERSONAS\\n CON FRESCURA, SORPRESA,\\n ENTRETENIMIENTO E INFLUENCIA."}
+{"buzz_text":"CONECTANDO MARCAS CON PERSONAS\\n CON FRESCURA, SORPRESA,\\n ENTRETENIMIENTO E INFLUENCIA.","buzz_text2":"the way we work"}
