--- a/locales/es/general.json
+++ b/locales/es/general.json
@@ -1,1 +1,1 @@
-{"back":"Volver","leadership":"liderazgo","sucess_cases":"casos de éxito"}
+{"back":"Volver","brandsterritory":"marcas y territorios","leadership":"liderazgo","sucess_cases":"casos de éxito"}
